unpackaged/main/default/objects/Frequent_Flyer_Number__c/Frequent_Flyer_Number__c.object-meta.xml
<CustomObject>
    <label>Frequent Flyer Number</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Frequent Flyer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Frequent Flyer Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>