unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Canada</fullName>
            </value>
            <value>
                <fullName>Air France</fullName>
            </value>
            <value>
                <fullName>Alaska Airlines</fullName>
            </value>
            <value>
                <fullName>Alitalia</fullName>
            </value>
            <value>
                <fullName>Allegiant Air</fullName>
            </value>
            <value>
                <fullName>American Airlines</fullName>
            </value>
            <value>
                <fullName>British Airways</fullName>
            </value>
            <value>
                <fullName>Delta Air Lines</fullName>
            </value>
            <value>
                <fullName>El Al</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>Etihad Airways</fullName>
            </value>
            <value>
                <fullName>Frontier Airlines</fullName>
            </value>
            <value>
                <fullName>Hawaiian Airlines</fullName>
            </value>
            <value>
                <fullName>JetBlue</fullName>
            </value>
            <value>
                <fullName>KLM</fullName>
            </value>
            <value>
                <fullName>La Compagnie</fullName>
            </value>
            <value>
                <fullName>Scandinavian Airlines (SAS)</fullName>
            </value>
            <value>
                <fullName>Singapore Airlines</fullName>
            </value>
            <value>
                <fullName>South African Airlines</fullName>
            </value>
            <value>
                <fullName>Southwest Airlines</fullName>
            </value>
            <value>
                <fullName>Spirit Airlines</fullName>
            </value>
            <value>
                <fullName>United Airlines</fullName>
            </value>
            <value>
                <fullName>Virgin Atlantic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>