unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Airline_lookup__c.field-meta.xml
<CustomField>
    <fullName>Airline_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Frequent Flyer Numbers</relationshipLabel>
    <relationshipName>Frequent_Flyer_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>