unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Airline_Name__c.field-meta.xml
<CustomField>
    <fullName>Airline_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Airline Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>