unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/AMEX_Points_Transfer_Allowable__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Points_Transfer_Allowable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMEX Points Transfer Allowable</label>
    <type>Checkbox</type>
</CustomField>