unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>Client_Name__r.Birthdate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>