unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Frequent Flyer Numbers</relationshipLabel>
    <relationshipName>Frequent_Flyer_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>