unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Password</label>
    <length>175</length>
    <type>Text</type>
</CustomField>