unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Security_Q_A__c.field-meta.xml
<CustomField>
    <fullName>Security_Q_A__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Security Q&amp;A</label>
    <type>TextArea</type>
</CustomField>