unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Status_Level__c.field-meta.xml
<CustomField>
    <fullName>Status_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>