unpackaged/main/default/objects/Frequent_Flyer_Number__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>