unpackaged/main/default/objects/Frequent_Flyer_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Airline__c</columns>
    <columns>Client_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>