unpackaged/main/default/objects/Frequent_Flyer_Number__c/listViews/Frequent_Flyer_Numbers.listView-meta.xml
<ListView>
    <fullName>Frequent_Flyer_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Airline__c</columns>
    <columns>Client_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Frequent Flyer Numbers</label>
</ListView>